// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon/Docs with some emoji 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c7=""
    ng-reflect-text="😀 😎 👍 💯"
  >
    <button
      _ngcontent-a-c7=""
    >
      😀 😎 👍 💯
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Addon/Docs with text 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c6=""
    ng-reflect-text="Hello Button"
  >
    <button
      _ngcontent-a-c6=""
    >
      Hello Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
